osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_call_kwargs/test_missing_keyword_argument.txt
error: 1 missing keyword argument(s)
--> main.sml:1:11
     |
   1 | Foo: str = JsonData()
     |            ^ the following keyword arguments were not provided: [`path`]